--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -5,6 +5,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <Using Include="System.ComponentModel" />
+        <Using Include="System.Diagnostics.CodeAnalysis" />
+        <Using Include="System.Globalization" />
         <Using Include="System.Runtime.CompilerServices" />
     </ItemGroup>
 
