--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,5 +1,7 @@
 <Project>
     <ItemGroup>
+        <PackageVersion Include="BenchmarkDotNet"
+                        Version="0.13.1" />
         <PackageVersion Include="coverlet.collector"
                         Version="3.1.2" />
         <PackageVersion Include="Iced"
