--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -5,10 +5,16 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <Using Include="System.Collections" />
+        <Using Include="System.Collections.Generic" />
         <Using Include="System.ComponentModel" />
+        <Using Include="System.Diagnostics" />
         <Using Include="System.Diagnostics.CodeAnalysis" />
         <Using Include="System.Globalization" />
+        <Using Include="System.Reflection" />
         <Using Include="System.Runtime.CompilerServices" />
+        <Using Include="System.Text" />
+        <Using Include="System.Text.RegularExpressions" />
     </ItemGroup>
 
     <ItemGroup>
