Add an info command to the CLI driver.

--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -13,6 +13,7 @@
         <Using Include="System.Globalization" />
         <Using Include="System.Reflection" />
         <Using Include="System.Runtime.CompilerServices" />
+        <Using Include="System.Runtime.InteropServices" />
         <Using Include="System.Text" />
         <Using Include="System.Text.RegularExpressions" />
     </ItemGroup>
