--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -6,7 +6,7 @@
                         Version="3.1.2" />
         <PackageVersion Include="Iced"
                         Version="1.17.0" />
-        <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.Workspaces"
+        <PackageVersion Include="Microsoft.CodeAnalysis.CSharp"
                         Version="4.2.0" />
         <PackageVersion Include="Microsoft.NET.Test.Sdk"
                         Version="17.2.0" />
