--- a/src/generators/generators.csproj
+++ b/src/generators/generators.csproj
@@ -11,7 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces"
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp"
                           PrivateAssets="all" />
     </ItemGroup>
 </Project>
