--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -5,8 +5,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <Using Include="System.Buffers" />
+        <Using Include="System.CodeDom.Compiler" />
         <Using Include="System.Collections" />
         <Using Include="System.Collections.Generic" />
+        <Using Include="System.Collections.Immutable" />
         <Using Include="System.ComponentModel" />
         <Using Include="System.Diagnostics" />
         <Using Include="System.Diagnostics.CodeAnalysis" />
@@ -16,6 +19,9 @@
         <Using Include="System.Runtime.InteropServices" />
         <Using Include="System.Text" />
         <Using Include="System.Text.RegularExpressions" />
+        <Using Include="System.Xml" />
+        <Using Include="System.Xml.Schema" />
+        <Using Include="System.Xml.Serialization" />
     </ItemGroup>
 
     <ItemGroup>
