--- a/src/syntax/syntax.csproj
+++ b/src/syntax/syntax.csproj
@@ -10,6 +10,10 @@ This package provides the language lexer, parser, and abstract syntax tree.</Pac
     </PropertyGroup>
 
     <ItemGroup>
+        <AdditionalFiles Include="Ast.xml" />
+    </ItemGroup>
+
+    <ItemGroup>
         <ProjectReference Include="../common/common.csproj" />
         <ProjectReference Include="../generators/generators.csproj"
                           OutputItemType="Analyzer"
