--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -33,7 +33,7 @@
         <PackageVersion Include="StyleCop.Analyzers"
                         Version="1.2.0-beta.435" />
         <PackageVersion Include="xunit"
-                        Version="2.4.2-pre.27" />
+                        Version="2.4.2" />
         <PackageVersion Include="xunit.runner.visualstudio"
                         Version="2.4.5" />
     </ItemGroup>
