--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
               run: |
                   dotnet tool restore
                   dotnet publish -c ${{ matrix.cfg }}
-#            - name: Run tests
-#              run: |
+            - name: Run tests
+              run: |
+                  dotnet test -c ${{ matrix.cfg }} --no-build
 #                  dotnet run --project src/benchmarks -c ${{ matrix.cfg }} --no-build
-#                  dotnet test -c ${{ matrix.cfg }} --no-build
