Add an internal Vezel.Celerity.Diagnostics.Check class and use it for argument validation.

--- a/src/syntax/syntax.csproj
+++ b/src/syntax/syntax.csproj
@@ -10,6 +10,10 @@ This package provides the language lexer, parser, and abstract syntax tree.</Pac
     </PropertyGroup>
 
     <ItemGroup>
+        <Using Include="Vezel.Celerity.Diagnostics" />
+    </ItemGroup>
+
+    <ItemGroup>
         <AdditionalFiles Include="Ast.xml" />
     </ItemGroup>
 
