--- a/src/cli/cli.csproj
+++ b/src/cli/cli.csproj
@@ -28,4 +28,10 @@ This package provides the .NET global tool.</PackageDescription>
         <PackageReference Include="RadLine" />
         <PackageReference Include="Spectre.Console.Cli" />
     </ItemGroup>
+
+    <Import Project="../kernel/buildTransitive/Vezel.Celerity.Kernel.targets" />
+    <Import Project="../runtime/buildTransitive/Vezel.Celerity.Runtime.targets" />
+    <Import Project="../semantics/buildTransitive/Vezel.Celerity.Semantics.targets" />
+    <Import Project="../server/buildTransitive/Vezel.Celerity.Server.targets" />
+    <Import Project="../syntax/buildTransitive/Vezel.Celerity.Syntax.targets" />
 </Project>
