Set LangVersion=latest, AnalysisLevel=latest-all.
Closes #7.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -9,8 +9,7 @@
 
     <PropertyGroup>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <!-- TODO: Switch to latest-all in .NET 7. -->
-        <AnalysisLevel>preview-all</AnalysisLevel>
+        <AnalysisLevel>latest-all</AnalysisLevel>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <ContinuousIntegrationBuild Condition="'$(CI)' == 'true'">true</ContinuousIntegrationBuild>
         <DebugType>none</DebugType>
@@ -19,8 +18,7 @@
         <ImplicitUsings>true</ImplicitUsings>
         <IsPackable>false</IsPackable>
         <IsPublishable>false</IsPublishable>
-        <!-- TODO: Switch to latest in .NET 7. -->
-        <LangVersion>preview</LangVersion>
+        <LangVersion>latest</LangVersion>
         <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
         <Nullable>enable</Nullable>
         <PackageDescription>$(Description)
@@ -35,7 +33,6 @@ collection.</PackageDescription>
         <PackageProjectUrl>https://docs.vezel.dev/celerity</PackageProjectUrl>
         <PublishRepositoryUrl>true</PublishRepositoryUrl>
         <RepositoryUrl>https://github.com/vezel-dev/celerity.git</RepositoryUrl>
-        <!-- TODO: Remove in .NET 7. -->
         <SuppressNETCoreSdkPreviewMessage>true</SuppressNETCoreSdkPreviewMessage>
         <TargetFramework>net7.0</TargetFramework>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
