Enable AOT, single-file, and trim analyzers on all packaged library projects.

--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -32,9 +32,15 @@
             <PropertyGroup>
                 <ApplicationIcon Condition="'$(OutputType)' != 'Library'">$(MSBuildThisFileDirectory)celerity.ico</ApplicationIcon>
                 <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-                <IsTrimmable Condition="'$(OutputType)' == 'Library'">>true</IsTrimmable>
                 <PackageIcon>celerity.png</PackageIcon>
                 <PackageReadmeFile>PACKAGE.md</PackageReadmeFile>
+            </PropertyGroup>
+
+            <PropertyGroup Condition="'$(OutputType)' == 'Library'">
+                <EnableAotAnalyzer>true</EnableAotAnalyzer>
+                <EnableSingleFileAnalyzer>true</EnableSingleFileAnalyzer>
+                <EnableTrimAnalyzer>true</EnableTrimAnalyzer>
+                <IsTrimmable>true</IsTrimmable>
             </PropertyGroup>
 
             <ItemGroup>
