Use C# required/init modifiers, and reference PolySharp for polyfills.

--- a/src/generators/generators.csproj
+++ b/src/generators/generators.csproj
@@ -13,5 +13,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp"
                           PrivateAssets="all" />
+        <PackageReference Include="PolySharp"
+                          PrivateAssets="all" />
     </ItemGroup>
 </Project>
