--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -26,6 +26,8 @@
                         Version="3.5.119" />
         <PackageVersion Include="OmniSharp.Extensions.LanguageServer"
                         Version="0.19.6" />
+        <PackageVersion Include="PolySharp"
+                        Version="1.10.0" />
         <PackageVersion Include="RadLine"
                         Version="0.6.0" />
         <PackageVersion Include="Spectre.Console.Cli"
