--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,4 +1,21 @@
 <Project>
+    <PropertyGroup>
+        <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <GlobalPackageReference Include="Microsoft.SourceLink.GitHub"
+                                Version="1.1.1" />
+        <GlobalPackageReference Include="Microsoft.VisualStudio.Threading.Analyzers"
+                                Version="17.3.48" />
+        <GlobalPackageReference Include="Nerdbank.GitVersioning"
+                                Version="3.5.119" />
+        <GlobalPackageReference Include="PolySharp"
+                                Version="1.10.0" />
+        <GlobalPackageReference Include="StyleCop.Analyzers"
+                                Version="1.2.0-beta.435" />
+    </ItemGroup>
+
     <ItemGroup>
         <PackageVersion Include="BenchmarkDotNet"
                         Version="0.13.2" />
@@ -10,30 +27,20 @@
                         Version="4.3.1" />
         <PackageVersion Include="Microsoft.NET.Test.Sdk"
                         Version="17.4.0" />
-        <PackageVersion Include="Microsoft.SourceLink.GitHub"
-                        Version="1.1.1" />
         <PackageVersion Include="Microsoft.TestPlatform.ObjectModel"
                         Version="17.4.0" />
-        <PackageVersion Include="Microsoft.VisualStudio.Threading.Analyzers"
-                        Version="17.3.48" />
         <PackageVersion Include="Microsoft.Windows.CsWin32"
                         Version="0.2.104-beta" />
         <PackageVersion Include="Microsoft.Windows.SDK.Win32Docs"
                         Version="0.1.8-alpha" />
         <PackageVersion Include="Microsoft.Windows.SDK.Win32Metadata"
                         Version="37.0.34-preview" />
-        <PackageVersion Include="Nerdbank.GitVersioning"
-                        Version="3.5.119" />
         <PackageVersion Include="OmniSharp.Extensions.LanguageServer"
                         Version="0.19.6" />
-        <PackageVersion Include="PolySharp"
-                        Version="1.10.0" />
         <PackageVersion Include="RadLine"
                         Version="0.6.0" />
         <PackageVersion Include="Spectre.Console.Cli"
                         Version="0.45.1-preview.0.33" />
-        <PackageVersion Include="StyleCop.Analyzers"
-                        Version="1.2.0-beta.435" />
         <PackageVersion Include="xunit"
                         Version="2.4.2" />
         <PackageVersion Include="xunit.runner.visualstudio"
