Add native helper library for the runtime system.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -9,6 +9,7 @@
     "hashhar.gitattributes",
     "jasonnutter.vscode-codeowners",
     "jock.svg",
+    "llvm-vs-code-extensions.vscode-clangd",
     "ms-dotnettools.csharp",
     "redhat.vscode-xml",
     "redhat.vscode-yaml",
