--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -6,6 +6,9 @@
     <ItemGroup>
         <GlobalPackageReference Include="DotNet.ReproducibleBuilds"
                                 Version="1.1.1" />
+    </ItemGroup>
+
+    <ItemGroup Condition="'$(UsingVezelZigSdk)' != 'true'">
         <GlobalPackageReference Include="Microsoft.SourceLink.GitHub"
                                 Version="1.1.1" />
         <GlobalPackageReference Include="Microsoft.VisualStudio.Threading.Analyzers"
