--- a/src/semantics/buildTransitive/Vezel.Celerity.Semantics.targets
+++ b/src/semantics/buildTransitive/Vezel.Celerity.Semantics.targets
@@ -1,4 +1,5 @@
 <Project>
     <ItemGroup Condition="'$(ImplicitUsings)' == 'true' or '$(ImplicitUsings)' == 'enable'">
+        <Using Include="Vezel.Celerity.Semantics" />
     </ItemGroup>
 </Project>
