Add a few extra projects and restructure a bit.

--- a/src/common/common.csproj
+++ b/src/common/common.csproj
@@ -12,10 +12,13 @@ This package provides common functionality used by all Celerity packages.</Packa
     <ItemGroup>
         <InternalsVisibleTo Include="celerity" />
         <InternalsVisibleTo Include="Vezel.Celerity.Common" />
+        <InternalsVisibleTo Include="Vezel.Celerity.Interpreter" />
+        <InternalsVisibleTo Include="Vezel.Celerity.Jit" />
         <InternalsVisibleTo Include="Vezel.Celerity.Kernel" />
         <InternalsVisibleTo Include="Vezel.Celerity.Runtime" />
         <InternalsVisibleTo Include="Vezel.Celerity.Semantics" />
         <InternalsVisibleTo Include="Vezel.Celerity.Server" />
         <InternalsVisibleTo Include="Vezel.Celerity.Syntax" />
+        <InternalsVisibleTo Include="Vezel.Celerity.Tooling" />
     </ItemGroup>
 </Project>
