--- a/src/trimming/trimming.csproj
+++ b/src/trimming/trimming.csproj
@@ -15,19 +15,25 @@
 
     <ItemGroup>
         <TrimmerRootAssembly Include="Vezel.Celerity.Common" />
+        <TrimmerRootAssembly Include="Vezel.Celerity.Interpreter" />
+        <TrimmerRootAssembly Include="Vezel.Celerity.Jit" />
         <TrimmerRootAssembly Include="Vezel.Celerity.Kernel" />
         <TrimmerRootAssembly Include="Vezel.Celerity.Runtime" />
         <TrimmerRootAssembly Include="Vezel.Celerity.Semantics" />
         <TrimmerRootAssembly Include="Vezel.Celerity.Server" />
         <TrimmerRootAssembly Include="Vezel.Celerity.Syntax" />
+        <TrimmerRootAssembly Include="Vezel.Celerity.Tooling" />
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="../common/common.csproj" />
+        <ProjectReference Include="../interpreter/interpreter.csproj" />
+        <ProjectReference Include="../jit/jit.csproj" />
         <ProjectReference Include="../kernel/kernel.csproj" />
         <ProjectReference Include="../runtime/runtime.csproj" />
         <ProjectReference Include="../semantics/semantics.csproj" />
         <ProjectReference Include="../server/server.csproj" />
         <ProjectReference Include="../syntax/syntax.csproj" />
+        <ProjectReference Include="../tooling/tooling.csproj" />
     </ItemGroup>
 </Project>
