--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -36,9 +36,12 @@ jobs:
                   names: |
                       celerity
                       Vezel.Celerity.Common
+                      Vezel.Celerity.Interpreter
+                      Vezel.Celerity.Jit
                       Vezel.Celerity.Kernel
                       Vezel.Celerity.Runtime
                       Vezel.Celerity.Semantics
                       Vezel.Celerity.Server
                       Vezel.Celerity.Syntax
+                      Vezel.Celerity.Tooling
                   keep: 25
