--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -46,6 +46,8 @@
                         Version="0.6.0" />
         <PackageVersion Include="Spectre.Console.Cli"
                         Version="0.46.0" />
+        <PackageVersion Include="Wcwidth"
+                        Version="1.0.0" />
         <PackageVersion Include="xunit"
                         Version="2.4.2" />
         <PackageVersion Include="xunit.runner.visualstudio"
