--- a/src/benchmarks/benchmarks.csproj
+++ b/src/benchmarks/benchmarks.csproj
@@ -24,6 +24,8 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="../interpreter/interpreter.csproj" />
+        <ProjectReference Include="../jit/jit.csproj" />
         <ProjectReference Include="../kernel/kernel.csproj" />
     </ItemGroup>
 
@@ -32,8 +34,11 @@
         <PackageReference Include="Spectre.Console.Cli" />
     </ItemGroup>
 
+    <Import Project="../interpreter/buildTransitive/Vezel.Celerity.Interpreter.targets" />
+    <Import Project="../jit/buildTransitive/Vezel.Celerity.Jit.targets" />
     <Import Project="../kernel/buildTransitive/Vezel.Celerity.Kernel.targets" />
     <Import Project="../runtime/buildTransitive/Vezel.Celerity.Runtime.targets" />
     <Import Project="../semantics/buildTransitive/Vezel.Celerity.Semantics.targets" />
     <Import Project="../syntax/buildTransitive/Vezel.Celerity.Syntax.targets" />
+    <Import Project="../tooling/buildTransitive/Vezel.Celerity.Tooling.targets" />
 </Project>
