--- a/src/cli/cli.csproj
+++ b/src/cli/cli.csproj
@@ -20,6 +20,8 @@ This package provides the .NET global tool.</PackageDescription>
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="../interpreter/interpreter.csproj" />
+        <ProjectReference Include="../jit/jit.csproj" />
         <ProjectReference Include="../kernel/kernel.csproj" />
         <ProjectReference Include="../server/server.csproj" />
     </ItemGroup>
@@ -29,9 +31,12 @@ This package provides the .NET global tool.</PackageDescription>
         <PackageReference Include="Spectre.Console.Cli" />
     </ItemGroup>
 
+    <Import Project="../interpreter/buildTransitive/Vezel.Celerity.Interpreter.targets" />
+    <Import Project="../jit/buildTransitive/Vezel.Celerity.Jit.targets" />
     <Import Project="../kernel/buildTransitive/Vezel.Celerity.Kernel.targets" />
     <Import Project="../runtime/buildTransitive/Vezel.Celerity.Runtime.targets" />
     <Import Project="../semantics/buildTransitive/Vezel.Celerity.Semantics.targets" />
     <Import Project="../server/buildTransitive/Vezel.Celerity.Server.targets" />
     <Import Project="../syntax/buildTransitive/Vezel.Celerity.Syntax.targets" />
+    <Import Project="../tooling/buildTransitive/Vezel.Celerity.Tooling.targets" />
 </Project>
