--- a/src/jit/buildTransitive/Vezel.Celerity.Jit.targets
+++ b/src/jit/buildTransitive/Vezel.Celerity.Jit.targets
@@ -1,6 +1,5 @@
 <Project>
     <ItemGroup Condition="'$(ImplicitUsings)' == 'true' or '$(ImplicitUsings)' == 'enable'">
-        <Using Include="Vezel.Celerity.Runtime" />
-        <Using Include="Vezel.Celerity.Runtime.Metadata" />
+        <Using Include="Vezel.Celerity.Jit" />
     </ItemGroup>
 </Project>
