--- a/src/runtime/runtime.csproj
+++ b/src/runtime/runtime.csproj
@@ -4,15 +4,11 @@
         <IsPackable>true</IsPackable>
         <PackageDescription>$(PackageDescription)
 
-This package provides the runtime system consisting of the interpreter, garbage
-collector, agent scheduler, etc.</PackageDescription>
+This package provides shared components of the runtime system such as the
+bytecode lowerer, garbage collector, and agent scheduler.</PackageDescription>
         <PackageId>Vezel.Celerity.Runtime</PackageId>
         <RootNamespace>Vezel.Celerity.Runtime</RootNamespace>
     </PropertyGroup>
-
-    <ItemGroup>
-        <Using Include="Vezel.Celerity.Semantics" />
-    </ItemGroup>
 
     <ItemGroup>
         <None Include="buildTransitive/**"
@@ -21,13 +17,10 @@ collector, agent scheduler, etc.</PackageDescription>
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="../native/native.cproj"
-                          ReferenceOutputAssembly="false" />
         <ProjectReference Include="../semantics/semantics.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Iced" />
         <PackageReference Include="Microsoft.Windows.CsWin32"
                           PrivateAssets="all" />
         <PackageReference Include="Microsoft.Windows.SDK.Win32Docs"
@@ -35,23 +28,6 @@ collector, agent scheduler, etc.</PackageDescription>
         <PackageReference Include="Microsoft.Windows.SDK.Win32Metadata"
                           PrivateAssets="all" />
     </ItemGroup>
-
-    <Target Name="_AddNativeLibraries"
-            DependsOnTargets="ResolveAssemblyReferences"
-            BeforeTargets="AssignTargetPaths">
-        <MSBuild Projects="../native/native.cproj"
-                 Targets="_GetNativeLibraries">
-            <Output TaskParameter="TargetOutputs"
-                    ItemName="_NativeLibrary" />
-        </MSBuild>
-
-        <ItemGroup>
-            <Content Include="@(_NativeLibrary)"
-                     CopyToOutputDirectory="Always"
-                     Link="%(RuntimeIdentifier)/%(Filename)%(Extension)"
-                     PackagePath="runtimes/%(RuntimeIdentifier)/native" />
-        </ItemGroup>
-    </Target>
 
     <Import Project="../semantics/buildTransitive/Vezel.Celerity.Semantics.targets" />
     <Import Project="../syntax/buildTransitive/Vezel.Celerity.Syntax.targets" />
