--- a/src/syntax/syntax.csproj
+++ b/src/syntax/syntax.csproj
@@ -4,7 +4,8 @@
         <IsPackable>true</IsPackable>
         <PackageDescription>$(PackageDescription)
 
-This package provides the language lexer, parser, and abstract syntax tree.</PackageDescription>
+This package provides syntactical analyses such as lexing and parsing, as well
+as the syntax tree representation.</PackageDescription>
         <PackageId>Vezel.Celerity.Syntax</PackageId>
         <RootNamespace>Vezel.Celerity.Syntax</RootNamespace>
     </PropertyGroup>
