--- a/src/tooling/tooling.csproj
+++ b/src/tooling/tooling.csproj
@@ -21,6 +21,8 @@ code formatting.</PackageDescription>
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="NuGet.Versioning" />
+        <PackageReference Include="Spdx" />
         <PackageReference Include="Wcwidth" />
     </ItemGroup>
 
