--- a/src/kernel/kernel.csproj
+++ b/src/kernel/kernel.csproj
@@ -24,6 +24,7 @@ interfaces for the runtime system.</PackageDescription>
         <ProjectReference Include="../runtime/runtime.csproj" />
     </ItemGroup>
 
+    <Import Project="../common/buildTransitive/Vezel.Celerity.Common.targets" />
     <Import Project="../runtime/buildTransitive/Vezel.Celerity.Runtime.targets" />
     <Import Project="../semantics/buildTransitive/Vezel.Celerity.Semantics.targets" />
     <Import Project="../syntax/buildTransitive/Vezel.Celerity.Syntax.targets" />
