--- a/src/syntax/syntax.csproj
+++ b/src/syntax/syntax.csproj
@@ -31,4 +31,6 @@ as the syntax tree representation.</PackageDescription>
                           OutputItemType="Analyzer"
                           ReferenceOutputAssembly="false" />
     </ItemGroup>
+
+    <Import Project="../common/buildTransitive/Vezel.Celerity.Common.targets" />
 </Project>
