--- a/src/tooling/tooling.csproj
+++ b/src/tooling/tooling.csproj
@@ -26,6 +26,7 @@ code formatting.</PackageDescription>
         <PackageReference Include="Wcwidth" />
     </ItemGroup>
 
+    <Import Project="../common/buildTransitive/Vezel.Celerity.Common.targets" />
     <Import Project="../semantics/buildTransitive/Vezel.Celerity.Semantics.targets" />
     <Import Project="../syntax/buildTransitive/Vezel.Celerity.Syntax.targets" />
 </Project>
