--- a/src/interpreter/interpreter.csproj
+++ b/src/interpreter/interpreter.csproj
@@ -20,6 +20,7 @@ dynamic code generation or the supporting native library.</PackageDescription>
         <ProjectReference Include="../runtime/runtime.csproj" />
     </ItemGroup>
 
+    <Import Project="../common/buildTransitive/Vezel.Celerity.Common.targets" />
     <Import Project="../runtime/buildTransitive/Vezel.Celerity.Runtime.targets" />
     <Import Project="../semantics/buildTransitive/Vezel.Celerity.Semantics.targets" />
     <Import Project="../syntax/buildTransitive/Vezel.Celerity.Syntax.targets" />
